# SQueTra

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
include/squetra/composable/: flushing_container.hpp  listener.hpp
include/squetra/util/: range_ops.hpp  sorted_ops.hpp  typedef.hpp
